* Improves javadoc, unit tests and bug fixes